// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Restaurants reducer FETCH_FAVORITED_RESTAURANTS.SUCCESS works as expected 1`] = `
Object {
  "favoritedItemIds": Array [
    "some_id_1",
    "some_id_2",
  ],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": true,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer FETCH_FAVORITED_RESTAURANTS.SUCCESS works as expected when empty array 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": true,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer QUERY_AREA.ERROR works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer QUERY_AREA.PENDING works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": true,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer QUERY_AREA.SUCCESS works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": Array [
    Object {
      "coordinates": Array [
        -122.408999,
        37.7902566,
      ],
      "id": "ChIJkVLoONZ_j4ARx2vJ4umERnI",
      "name": "Uncle Vito's Pizza",
      "photoUrl": "https://maps.googleapis.com/maps/api/place/js/PhotoService.GetPhoto?1sAap_uEBdIFbWc8LjoO8hOGn1QTJBeq21XOCk6ZHFGBmGWWqrImCdbERWb-K4T9Mq_QB5Mspi1Kiyc_GTU_XRbcReDLyGaIWdJWcssnsj3mZmy5xQsGCPeuOiBjjDEciT92r5iUeEAvSNn4dPN2r9rng9SH3fTXpxlT6BA5TB1MPzYfQ_GU5J&3u4032&5m1&2e1&callback=none&key=AIzaSyDg0Zd8r5Jf5i4MWlM9_eGYrpyRUeqBbPY&token=10623",
      "placeUrl": "https://www.google.com/maps/search/?api=1&query=Uncle%20Vito's%20Pizza&query_place_id=ChIJkVLoONZ_j4ARx2vJ4umERnI",
      "priceLevel": 1,
      "rating": 4.3,
      "supportingText": "restaurant",
      "userRatingsTotal": 1427,
    },
    Object {
      "coordinates": Array [
        -122.408675,
        37.7900735,
      ],
      "id": "ChIJg7cNIYyAhYAR8D4ml1oItTg",
      "name": "Roxanne's Cafe",
      "photoUrl": "https://maps.googleapis.com/maps/api/place/js/PhotoService.GetPhoto?1sAap_uEB-N4JLe8ZfukWW8G8Jum72Mw6dOey3xmpS8ywrT9kWjlPfrwgcjLFYrlY1NKGCMEDPTW0I4fgrbAmcVyf5ZEsE49LXdhibUiM-E4EKVyJQ2_wmj_NRZ_i999eUks-hnCQQZAeMxbqQlz9LxXSg3XZ5PWM0u_cHkHzfydi5_0CsKf0h&3u3840&5m1&2e1&callback=none&key=AIzaSyDg0Zd8r5Jf5i4MWlM9_eGYrpyRUeqBbPY&token=109601",
      "placeUrl": "https://www.google.com/maps/search/?api=1&query=Roxanne's%20Cafe&query_place_id=ChIJg7cNIYyAhYAR8D4ml1oItTg",
      "priceLevel": 2,
      "rating": 4.2,
      "supportingText": "restaurant",
      "userRatingsTotal": 1219,
    },
    Object {
      "coordinates": Array [
        -122.4073542,
        37.7902509,
      ],
      "id": "ChIJaa9OAYyAhYARxwgUHLNEpOY",
      "name": "Bouche",
      "photoUrl": "https://maps.googleapis.com/maps/api/place/js/PhotoService.GetPhoto?1sAap_uECKcrbqCoKyZnMn5XOnFD966Cp30QU9X9dOo_T7KeS3n3P0b2K2OsoxMyu8-yJbPBSanZVr1aNknFhWD9IUWfSjlHXWttBocnuB1ntZZV8ANEq5YkZnA-rqRdfN-IIzZqpiRYlQPqkEzcVb5f8F1L8sb1UbX20jMcIu_ykyiGF8rFQZ&3u3264&5m1&2e1&callback=none&key=AIzaSyDg0Zd8r5Jf5i4MWlM9_eGYrpyRUeqBbPY&token=51444",
      "placeUrl": "https://www.google.com/maps/search/?api=1&query=Bouche&query_place_id=ChIJaa9OAYyAhYARxwgUHLNEpOY",
      "priceLevel": 3,
      "rating": 4.5,
      "supportingText": "bar",
      "userRatingsTotal": 465,
    },
    Object {
      "coordinates": Array [
        -122.409088,
        37.7902449,
      ],
      "id": "ChIJvXXIOoyAhYARe-ixq3WdmrY",
      "name": "Sons & Daughters",
      "photoUrl": "https://maps.googleapis.com/maps/api/place/js/PhotoService.GetPhoto?1sAap_uEAbOQ0teYS553dCZEA4txE2wQ53voHdUlQ3-fn5cIed26LOIVIJPWSC7tN5Ie3vhuct5Dw91rpYrP5b8qdw941fIatGOuudqCaA0Ox-MlvCb6mkyVTN5gewLdZsXw5h_QskeQCcltf6-aHXYx2Oa0O-EISmb0NDVQlYqOJmgG-CCMMz&3u1488&5m1&2e1&callback=none&key=AIzaSyDg0Zd8r5Jf5i4MWlM9_eGYrpyRUeqBbPY&token=91263",
      "placeUrl": "https://www.google.com/maps/search/?api=1&query=Sons%20%26%20Daughters&query_place_id=ChIJvXXIOoyAhYARe-ixq3WdmrY",
      "priceLevel": 4,
      "rating": 4.6,
      "supportingText": "restaurant",
      "userRatingsTotal": 249,
    },
  ],
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer SET_FILTER_OPTION works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": "high_to_low",
}
`;

exports[`Restaurants reducer SET_HIGHLIGHTED_RESTAURANT_ID works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": "some_id",
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer UPDATE_FAVORITED_RESTAURANTS.ERROR works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": true,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer UPDATE_FAVORITED_RESTAURANTS.PENDING works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": true,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer UPDATE_FAVORITED_RESTAURANTS.SUCCESS works as expected 1`] = `
Object {
  "favoritedItemIds": Array [
    "some_id_1",
    "some_id_2",
  ],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer UPDATE_FAVORITED_RESTAURANTS.SUCCESS works as expected when empty array 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer returns the initial state 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;
